# bevy_forest_scene

./: Cargo.toml
assets/: scene_config.scn.ron
src/: main.rs  ships.rs
