[package]
name = "bevy_forest_scene"
version = "0.1.0"
edition = "2021"

[features]
default = []

inspector = [ "bevy-inspector-egui" ]

[dependencies]
bevy = { version = "0.14", features = [
    "bevy_gltf",
    "bevy_pbr",
    "jpeg",
    "png",
    "sysinfo_plugin",
    "bevy_winit",
    "tonemapping_luts",
    "multi_threaded",
    "file_watcher",
] }
noise = "0.9.0"
rand = "0.8.5"
bevy_water = { version = "0.14.2", features = ["ssr"] }

bevy-inspector-egui = { version = "0.25", optional = true }

[profile.dev.package."*"]
opt-level = 3
debug = 0
strip = "debuginfo"

[profile.dev]
opt-level = 1
debug = 0
strip = "debuginfo"
